aevi_security_group.tf
resource "aws_security_group" "terraform-ecs" {
  name = "terraform-ecs-${var.environment}"
  description = "Terraform terraform-ecs security group"

  // allows traffic from the SG itself for tcp
  ingress {
       from_port = 0
       to_port   = 65535
       protocol  = "tcp"
       self = true
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
      from_port = 7000
      to_port = 7000
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
      from_port = 7001
      to_port = 7001
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  // allow traffic for TCP 7199 (JMX)
  ingress {
      from_port = 7199
      to_port = 7199
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  // allow traffic for TCP 7199 (JMX)
  ingress {
      from_port = 8000
      to_port   = 8002
      protocol  = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
   from_port   = 8888
   to_port     = 8888
   protocol    = "tcp"
   cidr_blocks = ["0.0.0.0/0"]
 }


  ingress {
    from_port   = 9042
    to_port     = 9042
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 9160
    to_port     = 9160
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 9418
    to_port     = 9418
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
      from_port = 61620
      to_port   = 61620
      protocol  = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
      from_port = 61621
      to_port   = 61621
      protocol  = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
     from_port = 0
     to_port = 0
     protocol = "-1"
     cidr_blocks = ["0.0.0.0/0"]
   }
  tags  = {
        "Name"        = "terraform-ecs-${var.environment}"
        "Environment" = "Development"
        "Role"        = "ecs"
  }
}
